[package]
name = "md-pgp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio"] }
rusqlite = "=0.32.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v7"] }
rand = "0.8.5"
pgp = "0.18.0"
anyhow = "1.0.100"
thiserror = "2.0.18"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
